[package]
name = "hibitset"
version = "0.1.0"
description = "Hierarchical bit set structure"
documentation = "https://slide-rs.github.io/hibitset/"
repository = "https://github.com/slide-rs/hibitset"
keywords = ["bitset", "container", "data-structures", "hierarchical"]
license = "Apache-2.0"
authors = ["csheratt"]

[dependencies]
atom = "0.3"

[dependencies.rayon]
version = "0.7"
optional = true
features = ["unstable"]

[features]
default = ["parallel"]
parallel = ["rayon"]
