[package]
name = "hibitset"
version = "0.5.1"
description = "Hierarchical bit set structure"
documentation = "https://docs.rs/hibitset"
repository = "https://github.com/slide-rs/hibitset"
keywords = ["bitset", "container", "data-structures", "hierarchical"]
categories = ["data-structures"]
license = "Apache-2.0"
authors = ["csheratt"]

[dependencies]
atom = "0.3"

[dependencies.rayon]
version = "1"
optional = true

[dev-dependencies]
rand = "0.3"

[features]
default = ["parallel"]
parallel = ["rayon"]
